# hoard

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
sample/: config  config.toml  config.toml.sample  config.yml  config_sample.toml  config_sample.yml  mine.yml
src/: combinator.rs  env_vars.rs  lib.rs  macros.rs  main.rs  utils.rs
src/checkers/: mod.rs
src/checkers/history/: last_paths.rs  mod.rs  operation.rs
src/command/: mod.rs
src/config/: directories.rs  hoard.rs  mod.rs
src/config/builder/: envtrie.rs  hoard.rs  mod.rs
src/config/builder/environment/: envvar.rs  exe.rs  hostname.rs  mod.rs  os.rs  path.rs
src/config/encrypt/: fortress.rs  mod.rs  recipients.rs  selection.rs  types.rs  utils.rs
src/config/encrypt/engine/: mod.rs
src/config/encrypt/engine/gpgme/: context.rs  gpg.rs  mod.rs
src/config/encrypt/protocol/: gpg.rs  mod.rs
src/config/encryption/: configuration.rs  mod.rs
src/config/filetypes/: assets.rs  format.rs  json.rs  mod.rs  printer.rs  toml.rs  yaml.rs
tests/common/: toml.rs
tests/config/: mod.rs
tests/config/precedence_conflict/: mod.rs
