[package]
name = "hoard"
version = "0.2.0"
authors = ["Michael Bryant <shadow53@shadow53.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Hoard backups of files across your filesystem into one location."
homepage = "https://github.com/Shadow53/hoard"
repository = "https://github.com/Shadow53/hoard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
atty = "0.2.14"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0.0"
crossbeam-channel = "0.5.1"
directories = "3.0.1"
globset = "0.4.8"
gpgme = "0.10.0"
hostname = "0.3"
ignore = "0.4.18"
md-5 = "0.9"
num_cpus = "1.13.0"
once_cell = "1.7"
petgraph = "0.5"
rand = "0.8.4"
regex = "1.5.4"
secstr = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.20"
structopt = "0.3.21"
strum = "0.21.0"
strum_macros = "0.21.1"
thiserror = "1.0.24"
toml = "0.5.8"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["ansi"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
which = "4.1"
zeroize = "1.4.1"
rayon = "1.5.1"
libc = "0.2.102"

[dependencies.syntect]
version = "4.6"
default_features = false
features = ["parsing", "yaml-load", "dump-load", "dump-create", "regex-onig"]

[dev-dependencies]
maplit = "1.0"
rand = "0.8"
serde_test = "1.0"
serial_test = "0.5"
tempfile = "3.2"
